# Utils

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  README.md  Utils.sln
Utils/: CMakeLists.txt  Utils.vcxproj  Utils.vcxproj.filters  cpp.hint
Utils/cmake/: r_utilsConfig.cmake.in
Utils/include/: RUtils.h  all.h
Utils/include/event/: Event.h  EventDispatcher.h  IEventListener.h
Utils/include/event/events/: InputEvents.h
Utils/include/exception/: Exception.h  ExceptionInclude.h  ExceptionMakro.h
Utils/include/exception/file/: FileException.h
Utils/include/exception/gui/: WindowApplicationException.h  WindowException.h
Utils/include/exception/json/: JsonArrayException.h  JsonElementException.h  JsonObjectException.h  JsonParserException.h
Utils/include/exception/string/: StringException.h
Utils/include/file/: File.h
Utils/include/gui/: Application.h  Window.h
Utils/include/gui/events/: ApplicationEvents.h  WindowEvents.h
Utils/include/gui/interface/: Interface.h
Utils/include/json/: Json.h  JsonArray.h  JsonElement.h  JsonObject.h  JsonParser.h
Utils/include/logger/: Logger.h  LoggerMakro.h
Utils/include/logger/window/: LoggerWindow.h
Utils/include/string/: StringUtils.h
Utils/include/time/: TimeUtils.h  Timer.h
Utils/src/: RUtils.cpp
Utils/src/event/: Event.cpp  EventDispatcher.cpp
Utils/src/file/: File.cpp
Utils/src/gui/: Application.cpp  Application_win.cpp  Window.cpp  Window_linux.cpp  Window_mac.cpp  Window_win.cpp
Utils/src/gui/interface/: Interface.cpp
Utils/src/json/: Json.cpp  JsonArray.cpp  JsonElement.cpp  JsonObject.cpp  JsonParser.cpp
Utils/src/logger/: Logger.cpp
Utils/src/string/: StringUtils.cpp
Utils/src/time/: TimeUtils.cpp  Timer.cpp
Utils/tests/: main.cpp
docs/: FILE.md  JSON.md  LOGGER.md  TIME.md
